--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,8 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Build
         run: fluentci run . build
+        env:
+          RELEASE_VERSION: ${{ env.RELEASE_VERSION }}
       - name: Upload release asset
         run: |
           for ext in tar.gz tar.gz.sha256; do
